<resources>
    <string name="app_name">BStory</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="story_image_content_description">Story Image</string>
    <string name="add_story_button_content_description">Add Story Button</string>
    <string name="setting_button_content_description">Setting Button</string>
    <string name="back_button_content_description">Back Button</string>
    <string name="story">Story</string>
    <string name="login_to">Log in to BStory</string>
    <string name="register_new_account">Register new account</string>
    <string name="login">Log in</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up_for_storystory">Sign up for BStory</string>
    <string name="name">Name</string>
    <string name="sign_up">Sign up</string>
    <string name="cancel">Cancel</string>
    <string name="post_story_button_content_description">Post Story Button</string>
    <string name="post">Post</string>
    <string name="what_s_happening">What\'s happening?</string>
    <string name="camera_button_content_description">Camera Button</string>
    <string name="error_email">Email must be use valid format</string>
    <string name="error_password">Password must be use 8 character</string>
    <string name="password_text_field_content_description">Password text field</string>
    <string name="email_text_field_content_description">Email text field</string>
    <string name="success_register">Successfully register</string>
    <string name="error_empty_field">This field is required</string>
    <string name="menu_home">Home</string>
    <string name="menu_map">Map</string>
    <string name="menu_settings">Settings</string>
    <string name="greeting">Hello, %1$s 👋🏻</string>
    <string name="image_preview_story_content_description">Image Preview Story</string>
    <string name="error_add_story">Image and description must not be empty</string>
    <string name="change_language_icon_content_description">Change Language Icon</string>
    <string name="change_language">Change Language</string>
    <string name="log_out">Log out</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="appwidget_text">Story Widget</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="empty_text">empty text</string>
    <string name="app_icon_content_description">App Icon</string>
    <string name="english">English</string>
    <string name="bahasa_indonesia">Indonesia</string>
    <string name="close">Close</string>
    <string name="choose">Choose</string>
    <string name="x_icon_content_description">X Icon</string>
    <string name="something_went_wrong">Oops.... Something went wrong</string>
    <string name="under_development">Under Development</string>

    <string name="title_activity_maps">MapsActivity</string>
    <string name="retry">Retry</string>
    <string name="use_location">Use location?</string>
    <string name="loading">Loading…</string>
    <string name="location_not_found">Location not found</string>
    <string name="location_denied">Permission denied. Unable to access location.</string>

    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>