<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="30dp"
    tools:context=".ui.register.RegisterFragment">

    <ImageView
        android:id="@+id/app_icon"
        android:layout_width="210dp"
        android:layout_height="200dp"
        android:layout_marginTop="40dp"
        android:alpha="0"
        android:contentDescription="@string/app_icon_content_description"
        android:src="@drawable/ic_splash"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:alpha="100" />

    <TextView
        android:id="@+id/register_headline"
        style="@style/HeadlineLanding"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:alpha="0"
        android:text="@string/register_new_account"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_icon"
        tools:alpha="100" />

    <EditText
        android:id="@+id/ed_register_name"
        style="@style/CustomTextField"
        android:alpha="0"
        android:autofillHints="name"
        android:hint="@string/name"
        android:inputType="text"
        app:cursorColor="@color/green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/register_headline"
        app:layout_constraintTop_toBottomOf="@id/register_headline"
        tools:alpha="100" />

    <com.example.bstory.ui.validation.EmailValidation
        android:id="@+id/ed_register_email"
        style="@style/CustomTextField"
        android:alpha="0"
        android:hint="@string/email"
        app:cursorColor="@color/green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/ed_register_name"
        app:layout_constraintTop_toBottomOf="@id/ed_register_name"
        tools:alpha="100" />

    <com.example.bstory.ui.validation.PasswordValidation
        android:id="@+id/ed_register_password"
        style="@style/CustomTextField"
        android:alpha="0"
        android:hint="@string/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/ed_register_email"
        app:layout_constraintTop_toBottomOf="@id/ed_register_email"
        tools:alpha="100" />

    <Button
        android:id="@+id/register_button"
        style="@style/ButtonTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:alpha="0"
        android:backgroundTint="@color/green"
        android:paddingVertical="12dp"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ed_register_password"
        tools:alpha="100" />

    <include
        android:id="@+id/loading_button"
        layout="@layout/content_loading_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/register_button"
        app:layout_constraintEnd_toEndOf="@id/register_button"
        app:layout_constraintStart_toStartOf="@id/register_button"
        app:layout_constraintTop_toTopOf="@id/register_button" />

</androidx.constraintlayout.widget.ConstraintLayout>