<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="30dp"
    tools:context=".ui.splash.SplashFragment">

    <ImageView
        android:id="@+id/app_icon"
        android:layout_width="78dp"
        android:layout_height="140dp"
        android:layout_marginTop="40dp"
        android:alpha="0"
        android:contentDescription="@string/app_icon_content_description"
        android:src="@drawable/ic_splash"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:alpha="100" />

    <TextView
        android:id="@+id/login_headline"
        style="@style/HeadlineLanding"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:layout_marginTop="24dp"
        android:alpha="0"
        android:textStyle="bold"
        android:text="@string/login_to"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_icon"
        tools:alpha="100" />

    <com.example.bstory.ui.validation.EmailValidation
        android:id="@+id/ed_login_email"
        style="@style/CustomTextField"
        android:alpha="0"
        android:hint="@string/email"
        app:cursorColor="@color/green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/login_headline"
        app:layout_constraintTop_toBottomOf="@id/login_headline"
        tools:alpha="100" />

    <com.example.bstory.ui.validation.PasswordValidation
        android:id="@+id/ed_login_password"
        style="@style/CustomTextField"
        android:alpha="0"
        android:hint="@string/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/login_headline"
        app:layout_constraintTop_toBottomOf="@id/ed_login_email"
        tools:alpha="100" />

    <Button
        android:id="@+id/login_button"
        style="@style/ButtonTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:alpha="0"
        android:backgroundTint="@color/green"
        android:paddingVertical="12dp"
        android:text="@string/login"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ed_login_password"
        tools:alpha="100" />

    <Button
        android:id="@+id/register_button"
        style="@style/ButtonTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alpha="0"
        android:backgroundTint="@color/gray"
        android:text="@string/sign_up_for_storystory"
        android:textColor="@color/green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_button"
        tools:alpha="100" />

    <include
        android:id="@+id/loading_button"
        layout="@layout/content_loading_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/login_button"
        app:layout_constraintEnd_toEndOf="@id/login_button"
        app:layout_constraintStart_toStartOf="@id/login_button"
        app:layout_constraintTop_toTopOf="@id/login_button" />


</androidx.constraintlayout.widget.ConstraintLayout>