<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">

            <Button
                android:id="@+id/back_button"
                style="@style/TextRegular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:background="@color/clear"
                android:text="@string/cancel"
                android:textColor="@color/green"
                android:textSize="17sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/button_add"
                style="@style/TextRegular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:backgroundTint="@color/green"
                android:contentDescription="@string/post_story_button_content_description"
                android:src="@drawable/baseline_settings_24"
                android:text="@string/post"
                android:textColor="@color/white"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <include
                android:id="@+id/loading_button"
                layout="@layout/content_loading_button"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@id/button_add"
                app:layout_constraintEnd_toEndOf="@id/button_add"
                app:layout_constraintStart_toStartOf="@id/button_add"
                app:layout_constraintTop_toTopOf="@id/button_add" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <View
                android:id="@+id/v_user_background"
                android:layout_width="37dp"
                android:layout_height="37dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/bg_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_user_label"
                style="@style/TextBold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="@id/v_user_background"
                app:layout_constraintEnd_toEndOf="@id/v_user_background"
                app:layout_constraintStart_toStartOf="@id/v_user_background"
                app:layout_constraintTop_toTopOf="@id/v_user_background"
                tools:text="U" />

            <EditText
                android:id="@+id/ed_add_description"
                style="@style/TextRegular"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="20dp"
                android:autofillHints="name"
                android:background="@color/clear"
                android:hint="@string/what_s_happening"
                android:inputType="text"
                app:layout_constraintBottom_toBottomOf="@id/v_user_background"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/v_user_background"
                app:layout_constraintTop_toTopOf="@id/v_user_background" />

            <ImageView
                android:id="@+id/iv_preview_story"
                android:layout_width="0dp"
                android:layout_height="400dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/image_preview_story_content_description"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ed_add_description"
                tools:src="@tools:sample/backgrounds/scenic" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="?attr/colorOnSecondary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <com.google.android.material.divider.MaterialDivider
                    android:id="@+id/divider"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_marginBottom="50dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>

                <ImageButton
                    android:id="@+id/ib_camera_button"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="20dp"
                    android:background="@color/clear"
                    android:contentDescription="@string/camera_button_content_description"
                    android:src="@drawable/baseline_camera_alt_24"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/divider" />

                <ImageButton
                    android:id="@+id/ib_gallery_button"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="20dp"
                    android:background="@color/clear"
                    android:contentDescription="@string/camera_button_content_description"
                    android:src="@drawable/baseline_insert_photo_24"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/ib_camera_button"
                    app:layout_constraintTop_toBottomOf="@id/divider" />

                <TextView
                    style="@style/TextRegular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/use_location"
                    app:layout_constraintTop_toBottomOf="@id/divider"
                    app:layout_constraintEnd_toStartOf="@id/sm_location"
                    app:layout_constraintBottom_toBottomOf="parent" />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/sm_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    app:thumbTint="@color/white"
                    app:layout_constraintTop_toBottomOf="@id/divider"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>